Update dark mode header/footer colors, fix light-flash on navigation

--- a/styles-dark.scss
+++ b/styles-dark.scss
@@ -5,8 +5,8 @@
 $lora: "Lora", serif;
 
 $body-bg:   #1E1814;
-$navbar-bg: #7A3E2C;
-$footer-bg: #2D4845;
+$navbar-bg: #3D221A;
+$footer-bg: #182D2B;
 $body-color: #F0E6DC;
 $link-color: #E8A070;
 
